tests/ui/parser/fn-colon-return-type.rs
fn foo(x: i32): i32 {
//~^ ERROR return types are denoted using `->`
    x
}

fn main() {}

// ferrocene-annotations: fls_qcb1n9c0e5hz
// Functions
